Changelog (English)
===================

1.3.9
Added support Gentoo (installation requires at least 4 GB of free space)
Limitation of scroll buffer size
Automatic mount /dev/shm
Updated debootstrap up to 1.0.48
Support for multiple input devices in framebuffer mode (in xorg.conf changed lines are marked as #linuxdeploy)
Optimize of making disk image file

1.3.8
Added support Ubuntu 13.04 Raring Ringtail
Added option for stop Android UI in framebuffer mode
Added Wi-Fi lock
Added support armv5tel architecture for openSUSE (VNC now works)
Bugfix: autostart problem

1.3.7
Added support Kali Linux
Added ability to display GUI through framebuffer
Fixed list of packages openSUSE installation
Bugfix: pacman error "invalid option"

1.3.6
Added support Fedora 18
Takes into account changes in openSUSE repository
Takes into account changes in Arch Linux packages
Added application icon in notification bar
Bugfix: dbus error in Arch Linux and Fedora
Bugfix: /dev/pts wrong mount mode

1.3.5
Redesigned interface (include ActionBarSherlock)
Improved autostart feature
Automatic update operating environment
Added check superuser permissions (root)
Double tap for select profile
Bugfix: incorrect use of default parameter

1.3.4
Added command status to linuxdeploy script
Added function startup GNU/Linux when running Android (Settings -> Autostart)
Excluded lost package insserv form openSUSE installation
Added DPI property for VNC
Improved algorithm displaying reports

1.3.3
Added xorg-fonts-misc package in Arch Linux GUI installation
Bugfix: dbus error in Debian/Ubuntu
Bugfix: update configuration file after change profile

1.3.2
Added support openSUSE installation
Improved Arch Linux mirrors settings
Updated BusyBox
Configuration file is updated only when the parameters are updated
Script linuxdeploy can now be run from Android console
Now can create a symbolic link to linuxdeploy in /system/bin (Settings -> Create symlink)
Notification of need to update the operating environment